// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hub is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<div
  className="flex-100 charge_card layout-row layout-wrap"
>
  <div
    className="charge_header layout-row layout-wrap flex-100"
  >
    <div
      className="flex-100 content layout-row"
    >
      <div
        className="flex-10 layout-column layout-align-center-start"
      >
        <i
          className="flex-none fa fa-map-marker"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333, #fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-80 layout-row layout-wrap layout-align-start-start"
      >
        <h3
          className="flex-100"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333, #fafafa)",
            }
          }
        >
           
          NAME
           
        </h3>
      </div>
      <div
        className="flex-10 layout-column layout-align-start-center"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start charge_panel"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none offset-5"
        >
          Import
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-center-start layout-wrap"
      >
        <ChargeSection
          currency="CURRENCY"
          key="RANDOM_KEY_0"
          tag="foo"
          value="VALUE"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 charge_card layout-row layout-wrap"
>
  <div
    className="charge_header layout-row layout-wrap flex-100"
  >
    <div
      className="flex-100 content layout-row"
    >
      <div
        className="flex-10 layout-column layout-align-center-start"
      >
        <i
          className="flex-none fa fa-map-marker"
          style={
            Object {
              "background": "black",
            }
          }
        />
      </div>
      <div
        className="flex-80 layout-row layout-wrap layout-align-start-start"
      >
        <h3
          className="flex-100"
          style={
            Object {
              "background": "black",
            }
          }
        >
           
          NAME
           
        </h3>
      </div>
      <div
        className="flex-10 layout-column layout-align-start-center"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start charge_panel"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none offset-5"
        >
          Import
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-center-start layout-wrap"
      >
        <ChargeSection
          currency="CURRENCY"
          key="RANDOM_KEY_1"
          tag="foo"
          value="VALUE"
        />
      </div>
    </div>
  </div>
</div>
`;
